2020-12-15  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (TYPIFY_BIN): DIV and CEILDIV accept
	arguments of different types.
	(CASE_OFFSET): Handle OFFSET / INT configuration.
	* libpoke/pkl-promo.c (pkl_promo_ps_op_div): Likewise.
	* libpoke/pkl-gen.c (pkl_gen_ps_op_div): Likewise.
	(pkl_gen_ps_op_cdiv): Likewise.
	* testsuite/poke.pkl/div-offset-int-1.pk: New test.
	* testsuite/poke.pkl/div-offset-int-2.pk: Likewise.
	* testsuite/poke.pkl/div-offset-int-3.pk: Likewise.
	* testsuite/poke.pkl/cdiv-offset-int-1.pk: Likewise.
	* testsuite/poke.pkl/cdiv-offset-int-2.pk: Likewise.
	* testsuite/poke.pkl/cdiv-offset-int-3.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.
	* doc/poke.texi (Offset Operations): Mention division of an offset
	by an integer.
	* etc/poke.rec (Support OFFSET / MAGNITUDE -> OFFSET): Remove as
	done.

2020-12-15  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_op_bconc): Improve
	diagnostics.
	* testsuite/poke.pkl/bconc-diag-1.pk: New test.
	* testsuite/poke.pkl/bconc-diag-2.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2020-12-15  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-def.c (info_var_cmd): .info var -> .info variables.
	(info_fun_cmd): .info fun -> .info functions.
	* doc/poke.texi (info command): Document .info types.

2020-12-15  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-info.c (info_types_cmd): Likewise.
	(info_cmds): Add info_types_cmd.
	* poke/pk-cmd-def.c (info_types_cmd): Define.
	(pk_cmd_info_types): New function.
	(print_type_decl): Likewise.
	* etc/poke.rec (Support the command `info types'): Remove as done.

2020-12-15  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-table.h: New file.
	* poke/pk-table.c: Likewise.
	* poke/*.c: Use pk-table to print tabulated data.
	* testsuite/poke.cmd/*.pk: Update.
	* etc/poke.rec (pk-table): Remove as done.

2020-11-08  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-table.h: New file.