@@ -421,6 +421,7 @@ token <integer> UNION    _("keyword `union'")
 %token BUILTIN_STRACE BUILTIN_TERM_RGB_TO_COLOR
 %token BUILTIN_TERM_GET_COLOR BUILTIN_TERM_SET_COLOR
 %token BUILTIN_TERM_GET_BGCOLOR BUILTIN_TERM_SET_BGCOLOR
+%token BUILTIN_TERM_BEGIN_CLASS BUILTIN_TERM_END_CLASS
 
 /* Compiler builtins.  */
 
@@ -2020,6 +2021,8 @@ builtin:
         | BUILTIN_TERM_SET_COLOR { $$ = PKL_AST_BUILTIN_TERM_SET_COLOR; }
         | BUILTIN_TERM_GET_BGCOLOR { $$ = PKL_AST_BUILTIN_TERM_GET_BGCOLOR; }
         | BUILTIN_TERM_SET_BGCOLOR { $$ = PKL_AST_BUILTIN_TERM_SET_BGCOLOR; }
+        | BUILTIN_TERM_BEGIN_CLASS { $$ = PKL_AST_BUILTIN_TERM_BEGIN_CLASS; }
+        | BUILTIN_TERM_END_CLASS { $$ = PKL_AST_BUILTIN_TERM_END_CLASS; }
         ;
 
 stmt_decl_list:
