@@ -1,3 +1,15 @@
+2020-12-17  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-ast.h (PKL_AST_BUILTIN_TERM_CLASS): Define.
+	(PKL_AST_BUILTIN_TERM_END_CLASS): Likewise.
+	* libpoke/pkl-lex.l: Handle tokens BUILTIN_TERM_CLASS and
+	BUILTIN_TERM_END_CLASS.
+	* libpoke/pkl-tab.y: Likewise.
+	* libpoke/pkl-rt.pk: Built-ins term_begin_class and
+	term_end_class.
+	* libpoke/pkl-gen.c (pkl_gen_ps_comp_stmt): Generate code for the
+	new builtins.
+
 2020-12-15  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-typify.c (TYPIFY_BIN): DIV and CEILDIV accept
